--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "@swimlane/ngx-charts": "latest"
+    "@swimlane/ngx-charts": "12.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.22",
